--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
- <p class="date"></p>   
+ <p class="date"></p> 
+ <button class="btn">Click me</button>  
 
-    <script src="ex-1/index.js"></script>
+    <script src="ex-2/index.js"></script>
 </body>
 </html>
