--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>JavaScript basic</title>
 </head>
+
 <body>
 
- <p class="date"></p>
+    <p class="date"></p>
 
- <button class="btn">Click me</button>  
+    <button class="btn">Click me</button>
 
-    <script src="ex-6/index.js"></script>
+    <form action="post" class="user-form">
+        <input type="number" class="user-input">
+    <button class="user-form-btn">Click me</button>
+    </form>
+    <script src="ex-8/index.js"></script>
 </body>
+
 </html>
