--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
         <input type="number" class="user-input">
     <button class="user-form-btn">Click me</button>
     </form>
+    <div class="calc">
+        <label for="first-number">1st Number:</label>
+        <input type="number" id="first-number">
+        <button class="multiply-btn">Multiply</button>
+        <label for="second-number">2nd Number:</label>        
+        <input type="number" id="second">
+        <button class="divide-btn">Divide</button>
+        <p>The Result Is:<span class="calc-result"></span></p>
+    </div>
+
+
     <script src="ex-8/index.js"></script>
 </body>
 
