--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
 
     <form action="post" class="user-form">
         <input type="number" class="user-input">
-    <button class="user-form-btn">Click me</button>
+        <button class="user-form-btn">Click me</button>
     </form>
-    <div class="calc">
+
+    <h2>Calculating</h2>
+    <form class="calc">
         <label for="first-number">1st Number:</label>
-        <input type="number" id="first-number">
+        <input type="number" id="first-number" class="one-n">
+        <label for="second-number">2nd Number:</label>
+        <input type="number" id="second" class="two-n">
         <button class="multiply-btn">Multiply</button>
-        <label for="second-number">2nd Number:</label>        
-        <input type="number" id="second">
         <button class="divide-btn">Divide</button>
-        <p>The Result Is:<span class="calc-result"></span></p>
-    </div>
+        <p>The Result Is:<input class="calc-result" readonly></p>
+    </form>
 
 
-    <script src="ex-8/index.js"></script>
+    <script src="ex-10/index.js"></script>
 </body>
 
 </html>
