--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
         <input type="number" id="second" class="two-n">
         <button class="multiply-btn">Multiply</button>
         <button class="divide-btn">Divide</button>
-        <p>The Result Is:<input class="calc-result" readonly></p>
+        <p>The Result Is:
+            <input class="calc-result" readonly>
+        </p>
     </form>
 
 
-    <script src="ex-10/index.js"></script>
+    <script src="ex-12/index.js"></script>
 </body>
 
 </html>
