--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         </p>
     </form>
 
+    <input type="tel" name="tel" pattern="[0-9]{1}-[0-9]3">
 
-    <script src="ex-14/index.js"></script>
+
+    <script src="ex-34/index.js"></script>
 </body>
 
 </html>
