--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
         <p>The Result Is:
             <input class="calc-result" readonly>
         </p>
+
+        
     </form>
 
-    
+    <p class="city"></p>
 
 
-    <script src="./51-100/ex-59/index.js"></script>
+    <script src="./51-100/ex-70/index.js"></script>
 </body>
 
 </html>
