--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p class="city"></p>
 
 
-    <script src="./51-100/ex-83/index.js"></script>
+    <script src="./ex-31/index.js"></script>
 </body>
 
 </html>
